<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/musicSongTitle"
        android:text="@string/song_title_string"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_name_string"
                android:textSize="35sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/musicArtistTextView"
                android:textSize="35sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_name_string"
                android:textSize="35sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/musicAlbumTextView"
                android:textSize="35sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites_string"
                android:textSize="35sp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/musicFavYesRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:saveEnabled="false"
                    android:textSize="25sp"
                    android:text="@string/fav_yes_btn_string"/>
                <RadioButton
                    android:id="@+id/musicFavNoRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:saveEnabled="false"
                    android:textSize="25sp"
                    android:text="@string/fav_no_btn_string"/>
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1000">
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/musicListenBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/listen_btn_string"/>
        <Button
            android:id="@+id/musicGoToBtn"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/go_to_btn_string"/>
    </LinearLayout>

</LinearLayout>